Wed Oct  5 12:18:39 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* examples/POA/DSI/Database_i.h:

          Include appropriate headers to address incomplete type
	  definition related compile-time errors.  Necessitated by header
	  dependency reductions in ACE.

Wed Oct  5 17:28:52 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_native.cpp:
        * TAO_IDL/ast/ast_operation.cpp:
        * TAO_IDL/be/be_native.cpp:
        * TAO_IDL/be_include/be_native.h:
        * TAO_IDL/include/ast_native.h:

          Implemented the handling of IDL native declarations in an
          IDL operation exception list. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for pointing out that, in the latest
          version of the CORBA Messaging specification, the
          ExceptionHolder valuetype contains an operation with this
          use case.

Wed Oct  5 11:44:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/AMH_Response_Handler.cpp:
          Removed not needed return at end of method

Wed Oct  5 11:23:27 2005  Simon McQueen  <sm@prismtech.com>

        * tao/CodecFactory.mpc:
        * tao/DynamicAny.mpc:
        * tao/IFR_Client.mpc:
        * tao/IORManipulation.mpc:
        * tao/PortableServer.mpc:
        * tao/Strategies.mpc:
        * tao/Valuetype.mpc:

          Removed 'anytypecode' base project and substituted 'core_anytypecode'.
          This removes a dependency on the IDL compiler that had crept in.

Wed Oct  5 02:24:50 2005  Bala Natarajan  <bala_natarajan at symantec dot com>

 	* tests/Queued_Message_Test/Queued_Message_Test.cpp:

	  Fixed compilation errors introduced from Mon Oct  3 06:33:20
	  2005  Bala Natarajan  <bala_natarajan at symantec dot com>

Tue Oct  4 15:15:02 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* configure.ac:
	* orbsvcs/tests/Makefile.am:

	  Add Bug_2247_Regression and Bug_2248_Regression directories.
