@@ -1,17 +1,32 @@
 // -*- MPC -*-
 // $Id$
 
+project(*idl): taoidldefaults {
+  IDL_Files {
+    Test.idl
+  }
+  custom_only = 1
+}
+
 project(*server): orbsvcsexe, portablegroup, portableserver {
+  after += *idl
   Source_Files {
     McastHello.cpp
+    TestS.cpp
+    TestC.cpp
     server.cpp
+  }
+  IDL_Files {
   }
 }
 
 project(*client): orbsvcsexe, portablegroup, portableserver {
+  after += *idl
   Source_Files {
     TestC.cpp
     client.cpp
+  }
+  IDL_Files {
   }
 }
 
